Final Media Queries max 480px

--- a/index.html
+++ b/index.html
@@ -137,14 +137,10 @@
     <img class="img-about" src="ressources/img/photo-frederico_cassola_2.jpg" alt="Image of Frederico Cassola"
       width="1080" height="1920" />
     <h2 class="about-title">About Me</h2>
-    <p class="about-description">
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit quaerat labore assumenda, molestias delectus dolor
-      consequuntur minima! A ratione eos ipsa necessitatibus quis nemo, quibusdam, animi inventore vero dolorum dolorem
-      in hic architecto quod voluptas veritatis molestias, iste non dolore. Ipsum dolore quos rerum rem fugiat expedita
-
+    <p class="about-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio amet saepe fugit quae aut quidem alias eos! Eligendi in blanditiis debitis, cumque quibusdam quisquam illum enim cupiditate maxime tempora veniam, vel quos ut, voluptatem distinctio maiores eaque dignissimos minima libero? Repellendus exercitationem dolore maxime sed! Cupiditate possimus eos enim nisi explicabo molestiae, laudantium maxime repellat! Praesentium veniam, quas vero numquam fuga temporibus? Obcaecati nobis assumenda exercitationem veritatis nesciunt nihil, quaerat dolore voluptatum distinctio quae dolorem explicabo deleniti consectetur nam, unde quas consequatur tempore doloribus animi inventore aspernatur dolor nulla, provident magnam! Nesciunt in at atque facilis blanditiis temporibus modi excepturi, sit neque accusamus quod omnis, voluptates placeat optio reprehenderit maxime reiciendis. Provident necessitatibus deserunt delectus illum quasi commodi impedit dicta quam, consequatur repellat doloribus reprehenderit suscipit dolores possimus amet officia laboriosam neque esse ad tempora modi pariatur vel debitis. Nemo provident cupiditate animi ex a enim non doloribus tenetur quis mollitia impedit, vero facilis excepturi nihil ad cum nesciunt quidem odio blanditiis sed et ea ipsum. Voluptatum ipsum possimus ea dolore! Neque aut a eligendi qui delectus, provident itaque distinctio modi rerum, inventore, repellat sed. Inventore error, corporis quidem dolore expedita veniam magnam architecto excepturi. Ullam maiores necessitatibus illum reprehenderit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione harum architecto aperiam ipsum maxime autem nihil veniam accusamus unde ex nisi, omnis ea similique mollitia repudiandae ab porro cupiditate nesciunt!
     </p>
   </section>
-  <footer class="contact-container" id="contact-footer">
+  <footer class="contact-container" id="contact-section">
     <h2 class="contact-title">Contact Me</h2>
     <ul class="contact-list">
       <li><a class="nav-link-contact" href="">FaceBook</a></li>
