--- a/index.html
+++ b/index.html
@@ -1,156 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="author" content="Frederico Cassola" />
-  <title>Frederico Cassola Web Developer</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-
-<body>
-  <header>
-    <nav id="navbar">
-      <ul class="nav-list">
-        <li><a class="nav-link" href="#projects">Work</a></li>
-        <li><a class="nav-link" href="#welcome-section">Welcome</a></li>
-        <li><a class="nav-link" href="#about-section">About</a></li>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Frederico Cassola" />
+    <title>Frederico Cassola Web Developer</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <header>
+      <nav id="navbar">
+        <ul class="nav-list">
+          <li><a class="nav-link" href="#projects">Work</a></li>
+          <li><a class="nav-link" href="#welcome-section">Welcome</a></li>
+          <li><a class="nav-link" href="#about-section">About</a></li>
+        </ul>
+      </nav>
+    </header>
+<section id="welcome-section">
+  <h1>Frederico Cassola</h1>
+  <div class="quotes-container">
+  <p id="quote1"><span class="quotes-style">"</span>We can lose alot of battles but will win the war!!!<span class="quotes-style">"</span></p>
+  <p id="quote2"><span class="quotes-style">"</span>Be not afraid of growing slowly; be afraid only of standing still.<span class="quotes-style">"</span></p>
+  <p id="quote3"><span class="quotes-style">"</span>Je t'aime plus que tout au monde<span class="quotes-style">"</span></p>
+</div>
+</section>
+    <section id="projects">
+      <div class="project-heading">
+        <h2>My Work</h2>
+      </div>
+      <div class="project-container-grid">
+      <div class="project">
+        <div class="img-container">
+        <img
+          class="img-style"
+          src="https://source.unsplash.com/random/450x300/?landscape"
+          alt="Image of a project"
+          width="530"
+          height="300"
+        />
+        <div class="overlay">
+          <h4>Used Tech</h4>
+            <p>HTML</p>
+            <p>CSS</p>
+            <p>JavaScript</p>
+      </div>
+    </div>
+    <h3>
+    <a href="" class="project-tile">Tribute Page</h3></a>
+  </h3>  
+  </div>
+      <div class="project">
+        <div class="img-container">
+          <img
+          class="img-style"
+          src="https://source.unsplash.com/random/450x300/?birds"
+          alt="Image of a project"
+          width="530"
+          height="300"
+        />
+        <div class="overlay">
+          <h4>Used Tech</h4>
+            <p>HTML</p>
+            <p>CSS</p>
+            <p>JavaScript</p>
+        </div>
+      </div>
+      <h3>
+      <a href="" class="project-tile" >Product Page</a>
+    </h3>
+    </div>
+      <div class="project">
+        <div class="img-container">
+          <img
+          class="img-style"
+          src="https://source.unsplash.com/random/450x300/?person"
+          alt="Image of a project"
+          width="530"
+          height="300"
+        />
+        <div class="overlay">
+          <h4>Used Tech</h4>
+            <p>HTML</p>
+            <p>CSS</p>
+            <p>JavaScript</p>
+        </div>
+      </div>
+      <h3>
+      <a href="" class="project-tile">Survey Form</h3></a>
+    </h3>
+    </div>
+      <div class="project">
+        <div class="img-container">
+          <img
+          class="img-style"
+          src="https://source.unsplash.com/random/450x300/?tech"
+          alt="Image of a project"
+          width="530"
+          height="300"
+        />
+        <div class="overlay">
+          <h4>Used Tech</h4>
+            <p>HTML</p>
+            <p>CSS</p>
+            <p>JavaScript</p>
+        </div>
+      </div>
+      <h3>
+      <a href="" class="project-tile">Documentation Page</h3></a>
+    </h3>
+    </div>
+      <div class="project">
+        <div class="img-container">
+          <img
+          class="img-style"
+          src="https://source.unsplash.com/random/450x300/?travel"
+          alt="Image of a project"
+          width="530"
+          height="300"
+        />
+        <div class="overlay">
+          <h4>Used Tech</h4>
+            <p>HTML</p>
+            <p>CSS</p>
+            <p>JavaScript</p>
+        </div>
+      </div>
+      <h3>
+      <a href="" class="project-tile">Travel Agency</h3></a>
+    </h3>
+    </div>
+      <div class="project">
+        <div class="img-container">
+          <img
+          class="img-style"
+          src="https://source.unsplash.com/random/450x300/?food"
+          alt="Image of a project"
+          width="530"
+          height="300"
+        />
+          <div class="overlay">
+            <h4>Used Tech</h4>
+              <p>HTML</p>
+              <p>CSS</p>
+              <p>JavaScript</p>
+          </div>
+      </div>
+      <h3>
+      <a href="" class="project-tile">Tacos Shop</h3></a>
+    </h3>
+    </div>
+  </div>
+    </section>
+    <section class="about-container" id="about-section">
+      <img class="img-about" src="ressources/img/photo-frederico_cassola_2.jpg" alt="Image of Frederico Cassola" width="1080" height="1920"/>
+      <h2 class="about-title">About Me</h2>
+      <p class="about-description">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit quaerat labore assumenda, molestias delectus dolor consequuntur minima! A ratione eos ipsa necessitatibus quis nemo, quibusdam, animi inventore vero dolorum dolorem in hic architecto quod voluptas veritatis molestias, iste non dolore. Ipsum dolore quos rerum rem fugiat expedita minus quibusdam praesentium! A culpa aspernatur recusandae vitae, deserunt minima, odit labore exercitationem dignissimos, reiciendis neque eveniet assumenda saepe modi pariatur dolores rerum? Nostrum, doloribus dicta veniam aliquam odit magni perferendis fuga, veritatis omnis velit, reiciendis eos magnam laudantium. Quisquam, nisi minus. Ipsam aut enim odio laudantium reprehenderit aperiam consectetur provident, at molestiae.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
+        dignissimos vero nesciunt eaque exercitationem dolor laboriosam,
+        possimus iure maxime quisquam ipsum eveniet necessitatibus a enim
+      </p>
+    </section>
+    <footer class="contact-container" id="contact-footer">
+      <h2 class="contact-title">Contact Me</h2>
+      <ul class="contact-list">
+        <li><a class="nav-link-contact" href="">FaceBook</a></li>
+        <li><a class="nav-link-contact" href="">Instagram</a></li>
+        <li><a class="nav-link-contact" href="https://github.com/Frederico-Cassola-Dev" target="_blank" id="profile-link">GitHub</a></li>
+        <li><a class="nav-link-contact" href="">LinkedIn</a></li>
+        <li><a class="nav-link-contact" href="">E-mail</a></li>
       </ul>
-    </nav>
-  </header>
-  <section id="welcome-section">
-    <h1>Frederico Cassola</h1>
-    <div class="quotes-container">
-      <p id="quote1"><span class="quotes-style">"</span>We can lose alot of battles but will win the war!!!<span
-          class="quotes-style">"</span></p>
-      <p id="quote2"><span class="quotes-style">"</span>Be not afraid of growing slowly; be afraid only of standing
-        still.<span class="quotes-style">"</span></p>
-      <p id="quote3"><span class="quotes-style">"</span>Je t'aime plus que tout au monde<span
-          class="quotes-style">"</span></p>
-    </div>
-  </section>
-  <section id="projects">
-    <div class="project-heading">
-      <h2>My Work</h2>
-    </div>
-    <div class="project-container-grid">
-      <div class="project">
-        <div class="img-container">
-          <img class="img-style" src="https://source.unsplash.com/random/450x300/?landscape" alt="Image of a project"
-            width="530" height="300" />
-          <div class="overlay">
-            <h4>Used Tech</h4>
-            <p>HTML</p>
-            <p>CSS</p>
-            <p>JavaScript</p>
-          </div>
-        </div>
-        <h3>
-          <a href="" class="project-tile">Tribute Page
-        </h3></a>
-        </h3>
-      </div>
-      <div class="project">
-        <div class="img-container">
-          <img class="img-style" src="https://source.unsplash.com/random/450x300/?birds" alt="Image of a project"
-            width="530" height="300" />
-          <div class="overlay">
-            <h4>Used Tech</h4>
-            <p>HTML</p>
-            <p>CSS</p>
-            <p>JavaScript</p>
-          </div>
-        </div>
-        <h3>
-          <a href="" class="project-tile">Product Page</a>
-        </h3>
-      </div>
-      <div class="project">
-        <div class="img-container">
-          <img class="img-style" src="https://source.unsplash.com/random/450x300/?person" alt="Image of a project"
-            width="530" height="300" />
-          <div class="overlay">
-            <h4>Used Tech</h4>
-            <p>HTML</p>
-            <p>CSS</p>
-            <p>JavaScript</p>
-          </div>
-        </div>
-        <h3>
-          <a href="" class="project-tile">Survey Form
-        </h3></a>
-        </h3>
-      </div>
-      <div class="project">
-        <div class="img-container">
-          <img class="img-style" src="https://source.unsplash.com/random/450x300/?tech" alt="Image of a project"
-            width="530" height="300" />
-          <div class="overlay">
-            <h4>Used Tech</h4>
-            <p>HTML</p>
-            <p>CSS</p>
-            <p>JavaScript</p>
-          </div>
-        </div>
-        <h3>
-          <a href="" class="project-tile">Documentation Page
-        </h3></a>
-        </h3>
-      </div>
-      <div class="project">
-        <div class="img-container">
-          <img class="img-style" src="https://source.unsplash.com/random/450x300/?travel" alt="Image of a project"
-            width="530" height="300" />
-          <div class="overlay">
-            <h4>Used Tech</h4>
-            <p>HTML</p>
-            <p>CSS</p>
-            <p>JavaScript</p>
-          </div>
-        </div>
-        <h3>
-          <a href="" class="project-tile">Travel Agency
-        </h3></a>
-        </h3>
-      </div>
-      <div class="project">
-        <div class="img-container">
-          <img class="img-style" src="https://source.unsplash.com/random/450x300/?food" alt="Image of a project"
-            width="530" height="300" />
-          <div class="overlay">
-            <h4>Used Tech</h4>
-            <p>HTML</p>
-            <p>CSS</p>
-            <p>JavaScript</p>
-          </div>
-        </div>
-        <h3>
-          <a href="" class="project-tile">Tacos Shop
-        </h3></a>
-        </h3>
-      </div>
-    </div>
-  </section>
-  <section class="about-container" id="about-section">
-    <img class="img-about" src="ressources/img/photo-frederico_cassola_2.jpg" alt="Image of Frederico Cassola"
-      width="1080" height="1920" />
-    <h2 class="about-title">About Me</h2>
-    <p class="about-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio amet saepe fugit quae aut quidem alias eos! Eligendi in blanditiis debitis, cumque quibusdam quisquam illum enim cupiditate maxime tempora veniam, vel quos ut, voluptatem distinctio maiores eaque dignissimos minima libero? Repellendus exercitationem dolore maxime sed! Cupiditate possimus eos enim nisi explicabo molestiae, laudantium maxime repellat! Praesentium veniam, quas vero numquam fuga temporibus? Obcaecati nobis assumenda exercitationem veritatis nesciunt nihil, quaerat dolore voluptatum distinctio quae dolorem explicabo deleniti consectetur nam, unde quas consequatur tempore doloribus animi inventore aspernatur dolor nulla, provident magnam! Nesciunt in at atque facilis blanditiis temporibus modi excepturi, sit neque accusamus quod omnis, voluptates placeat optio reprehenderit maxime reiciendis. Provident necessitatibus deserunt delectus illum quasi commodi impedit dicta quam, consequatur repellat doloribus reprehenderit suscipit dolores possimus amet officia laboriosam neque esse ad tempora modi pariatur vel debitis. Nemo provident cupiditate animi ex a enim non doloribus tenetur quis mollitia impedit, vero facilis excepturi nihil ad cum nesciunt quidem odio blanditiis sed et ea ipsum. Voluptatum ipsum possimus ea dolore! Neque aut a eligendi qui delectus, provident itaque distinctio modi rerum, inventore, repellat sed. Inventore error, corporis quidem dolore expedita veniam magnam architecto excepturi. Ullam maiores necessitatibus illum reprehenderit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione harum architecto aperiam ipsum maxime autem nihil veniam accusamus unde ex nisi, omnis ea similique mollitia repudiandae ab porro cupiditate nesciunt!
-    </p>
-  </section>
-  <footer class="contact-container" id="contact-section">
-    <h2 class="contact-title">Contact Me</h2>
-    <ul class="contact-list">
-      <li><a class="nav-link-contact" href="">FaceBook</a></li>
-      <li><a class="nav-link-contact" href="">Instagram</a></li>
-      <li><a class="nav-link-contact" href="https://github.com/Frederico-Cassola-Dev" target="_blank"
-          id="profile-link">GitHub</a></li>
-      <li><a class="nav-link-contact" href="">LinkedIn</a></li>
-      <li><a class="nav-link-contact" href="">E-mail</a></li>
-    </ul>
-  </footer>
-</body>
-
+    </footer>
+  </body>
 </html>
