--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="quotes-container">
   <p id="quote1"><span class="quotes-style">"</span>We can lose alot of battles but will win the war!!!<span class="quotes-style">"</span></p>
   <p id="quote2"><span class="quotes-style">"</span>Be not afraid of growing slowly; be afraid only of standing still.<span class="quotes-style">"</span></p>
-  <p id="quote3"><span class="quotes-style">"</span>Philosophy is the art of living.<br>Je t'aime plus que tout au monde<span class="quotes-style">"</span></p>
+  <p id="quote3"><span class="quotes-style">"</span>Philosophy is the art of living.<span class="quotes-style">"</span></p>
 </div>
 </section>
     <section id="projects">
