--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
   <section id="welcome-section">
     <h1>Frederico Cassola</h1>
     <div class="quotes-container">
-      <p id="quote"><span class="quotes-style">"</span>We can lose alot of battles but will win the war!!!<span
-          class="quotes-style">"</span></p>
+      <p id="quote"></p>
     </div>
   </section>
   <section id="projects">
