Add portfolio projects to freecodecamp

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </div>
         </div>
         <h3>
-          <a href="" class="project-tile">Tribute Page
+          <a href="tribute.html" class="project-tile">Tribute Page
         </h3></a>
         </h3>
       </div>
