Link index from projects

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </div>
         </div>
         <h3>
-          <a href="" class="project-tile">Product Page</a>
+          <a href="prodland.html" class="project-tile">Product Page</a>
         </h3>
       </div>
       <div class="project">
@@ -74,7 +74,7 @@
           </div>
         </div>
         <h3>
-          <a href="" class="project-tile">Survey Form
+          <a href="survey.html" class="project-tile">Survey Form
         </h3></a>
         </h3>
       </div>
@@ -90,7 +90,7 @@
           </div>
         </div>
         <h3>
-          <a href="" class="project-tile">Documentation Page
+          <a href="techdoc.html" class="project-tile">Documentation Page
         </h3></a>
         </h3>
       </div>
@@ -106,7 +106,7 @@
           </div>
         </div>
         <h3>
-          <a href="" class="project-tile">Travel Agency
+          <a href="" class="project-tile">Travel Agency Coming
         </h3></a>
         </h3>
       </div>
@@ -122,7 +122,7 @@
           </div>
         </div>
         <h3>
-          <a href="" class="project-tile">Tacos Shop
+          <a href="" class="project-tile">Tacos Shop Coming
         </h3></a>
         </h3>
       </div>
