--- a/prodland.html
+++ b/prodland.html
@@ -1,145 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Frederico Cassola" />
-    <title>Product Landing Page</title>
-    <link rel="stylesheet" href="main-2.css" />
-  </head>
 
-  <body>
-    <header id="header">
-      <img
-        class="header-img"
-        id="header-img"
-        src="img/original_trombones.png"
-        alt="Original Trombones Logo"
-        width="1072"
-        height="122"
-      />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Frederico Cassola" />
+  <title>Product Landing Page</title>
+  <link rel="stylesheet" href="prodland-style.css" />
+</head>
 
-      <nav class="nav-bar" id="nav-bar">
-        <ul>
-          <li><a class="nav-link" href="#features">Features</a></li>
+<body>
+  <header id="header">
+    <img class="header-img" id="header-img" src="ressources/img/original_trombones.png" alt="Original Trombones Logo"
+      width="1072" height="122" />
 
-          <li><a class="nav-link" href="#how-it-works">How It Works</a></li>
+    <nav class="nav-bar" id="nav-bar">
+      <ul>
+        <li><a class="nav-link" href="#features">Features</a></li>
 
-          <li><a class="nav-link" href="#pricing">Pricing</a></li>
-        </ul>
-      </nav>
-    </header>
-    <div class="title" id="title">
-      <h1>Handcrafted, home-made masterpieces</h1>
+        <li><a class="nav-link" href="#how-it-works">How It Works</a></li>
+
+        <li><a class="nav-link" href="#pricing">Pricing</a></li>
+      </ul>
+    </nav>
+  </header>
+  <div class="title" id="title">
+    <h1>Handcrafted, home-made masterpieces</h1>
+  </div>
+  <main>
+    <div class="form">
+      <form id="form" action="https://www.freecodecamp.com/email-submit">
+        <label for="email"></label>
+        <input type="email" name="email" id="email" placeholder=" Enter your email address" />
+        <br />
+        <button type="submit" id="submit">
+          <strong>GET STARTED</strong>
+        </button>
+      </form>
     </div>
-    <main>
-      <div class="form">
-        <form id="form" action="https://www.freecodecamp.com/email-submit">
-          <label for="email"></label>
-          <input
-            type="email"
-            name="email"
-            id="email"
-            placeholder=" Enter your email address"
-          />
-          <br />
-          <button type="submit" id="submit">
-            <strong>GET STARTED</strong>
-          </button>
-        </form>
+    <section class="features" id="features">
+      <div class="premium">
+        <img src="ressources/icon/fire-2-512.png" alt="Fire Logo" width="512" height="512" />
+        <div class="feature-text">
+          <h2>Premium Materials</h2>
+          <p>
+            Our trombones use the shiniest brass which is sourced locally.
+            This will increase the longevity of your purchase.
+          </p>
+        </div>
       </div>
-      <section class="features" id="features">
-        <div class="premium">
-          <img src="img/fire-2-512.png" alt="Fire Logo" width="512" height="512" />
-          <div class="feature-text">
-            <h2>Premium Materials</h2>
-            <p>
-              Our trombones use the shiniest brass which is sourced locally.
-              This will increase the longevity of your purchase.
-            </p>
-          </div>
+      <div class="shipping">
+        <img src="ressources/icon/free-shipping-512.png" alt="Shipping Logo" width="512" height="512" />
+        <div class="feature-text">
+          <h2>Fast Shipping</h2>
+          <p>
+            We make sure you recieve your trombone as soon as we have finished
+            making it. We also provide free returns if you are not satisfied.
+          </p>
         </div>
-        <div class="shipping">
-          <img src="img/free-shipping-512.png" alt="Shipping Logo" width="512" height="512" />
-          <div class="feature-text">
-            <h2>Fast Shipping</h2>
-            <p>
-              We make sure you recieve your trombone as soon as we have finished
-              making it. We also provide free returns if you are not satisfied.
-            </p>
-          </div>
+      </div>
+      <div class="quality">
+        <img src="ressources/icon/battery-11-512.png" alt="Full Charged Battery Logo" width="512" height="512" />
+        <div class="feature-text">
+          <h2>Quality Assurance</h2>
+          <p>
+            For every purchase you make, we will ensure there are no damages
+            or faults and we will check and test the pitch of your instrument.
+          </p>
         </div>
-        <div class="quality">
-          <img
-            src="img/battery-11-512.png"
-            alt="Full Charged Battery Logo"
-            width="512"
-            height="512"
-          />
-          <div class="feature-text">
-            <h2>Quality Assurance</h2>
-            <p>
-              For every purchase you make, we will ensure there are no damages
-              or faults and we will check and test the pitch of your instrument.
-            </p>
-          </div>
-        </div>
-      </section>
+      </div>
+    </section>
 
-      <section class="how-it-works" id="how-it-works">
-        <h2 class="hidden">How It Works</h2>
-        <iframe
-        id="video"
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/GFHcBG-frwg"
-          title="YouTube video player"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
-      </section>
+    <section class="how-it-works" id="how-it-works">
+      <h2 class="hidden">How It Works</h2>
+      <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/GFHcBG-frwg"
+        title="YouTube video player"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
+    </section>
 
-      <section class="pricing" id="pricing">
-        <div class="pricing-content">
-          <h2>TENOR TROMBONE</h2>
-          <h3><em>$</em>600</h3>
-          <p>Lorem, ipsum</p>
-          <p>Lorem, ipsum</p>
-          <p>Lorem, ipsum</p>
-          <p>Lorem, ipsum</p>
-          <button>SELECT</button>
-        </div>
-        <div class="pricing-content">
-          <h2>BASS TROMBONE</h2>
-          <h3><em>$</em>900</h3>
-          <p>Lorem, ipsum</p>
-          <p>Lorem, ipsum</p>
-          <p>Lorem, ipsum</p>
-          <p>Lorem, ipsum</p>
-          <button>SELECT</button>
-        </div>
-        <div class="pricing-content">
-          <h2>VALVE TROMBONE</h2>
-          <h3><em>$</em>1200</h3>
-          <p>Lorem ipsum</p>
-          <p>Lorem, ipsum</p>
-          <p>Lorem, ipsum</p>
-          <p>Lorem, ipsum</p>
-          <button>SELECT</button>
-        </div>
-      </section>
-    </main>
+    <section class="pricing" id="pricing">
+      <div class="pricing-content">
+        <h2>TENOR TROMBONE</h2>
+        <h3><em>$</em>600</h3>
+        <p>Lorem, ipsum</p>
+        <p>Lorem, ipsum</p>
+        <p>Lorem, ipsum</p>
+        <p>Lorem, ipsum</p>
+        <button>SELECT</button>
+      </div>
+      <div class="pricing-content">
+        <h2>BASS TROMBONE</h2>
+        <h3><em>$</em>900</h3>
+        <p>Lorem, ipsum</p>
+        <p>Lorem, ipsum</p>
+        <p>Lorem, ipsum</p>
+        <p>Lorem, ipsum</p>
+        <button>SELECT</button>
+      </div>
+      <div class="pricing-content">
+        <h2>VALVE TROMBONE</h2>
+        <h3><em>$</em>1200</h3>
+        <p>Lorem ipsum</p>
+        <p>Lorem, ipsum</p>
+        <p>Lorem, ipsum</p>
+        <p>Lorem, ipsum</p>
+        <button>SELECT</button>
+      </div>
+    </section>
+  </main>
 
-    <footer>
-      <nav>
-        <ul>
-          <li ><a class="nav-link" href="">Privacy</a></li>
-          <li ><a class="nav-link" href="">Terms</a></li>
-          <li ><a class="nav-link" href="">Contact</a></li>
-        </ul>
-      </nav>
-      <p>Copyright 2016, Original Trombones</p>
-    </footer>
-  </body>
+  <footer>
+    <nav>
+      <ul>
+        <li><a class="nav-link" href="">Privacy</a></li>
+        <li><a class="nav-link" href="">Terms</a></li>
+        <li><a class="nav-link" href="">Contact</a></li>
+      </ul>
+    </nav>
+    <p>Copyright 2016, Original Trombones</p>
+  </footer>
+</body>
+
 </html>
