--- a/survey.html
+++ b/survey.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Frederico Cassola" />
     <title>Survey Form 2</title>
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="survey-style.css" />
 </head>
 
 <body>
