--- a/techdoc.html
+++ b/techdoc.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="author" content="Frederico Cassola" />
   <title>Technical Documentation Page</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="techdoc-style.css" />
 </head>
 
 <body>
