Change projects images

--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
     <div class="project-container-grid">
       <div class="project">
         <div class="img-container">
-          <img class="img-style" src="https://source.unsplash.com/random/450x300/?landscape" alt="Image of a project"
-            width="530" height="300" />
+          <!-- <img class="img-style" src="https://source.unsplash.com/random/450x300/?landscape" alt="Image of a project"
+            width="530" height="300" /> -->
+          <img class="img-style" src="ressources/img/tribute-page-screen.png" alt="Image of a project" width="530"
+            height="300" />
           <div class="overlay">
             <h4>Used Tech</h4>
             <p>HTML</p>
@@ -49,8 +51,10 @@
       </div>
       <div class="project">
         <div class="img-container">
-          <img class="img-style" src="https://source.unsplash.com/random/450x300/?birds" alt="Image of a project"
-            width="530" height="300" />
+          <!-- <img class="img-style" src="https://source.unsplash.com/random/450x300/?birds" alt="Image of a project"
+            width="530" height="300" /> -->
+          <img class="img-style" src="ressources/img/product-landing-screen.png" alt="Image of a project" width="530"
+            height="300" />
           <div class="overlay">
             <h4>Used Tech</h4>
             <p>HTML</p>
@@ -64,8 +68,10 @@
       </div>
       <div class="project">
         <div class="img-container">
-          <img class="img-style" src="https://source.unsplash.com/random/450x300/?person" alt="Image of a project"
-            width="530" height="300" />
+          <!-- <img class="img-style" src="https://source.unsplash.com/random/450x300/?person" alt="Image of a project"
+            width="530" height="300" /> -->
+          <img class="img-style" src="ressources/img/survey-form-screen.png" alt="Image of a project" width="530"
+            height="300" />
           <div class="overlay">
             <h4>Used Tech</h4>
             <p>HTML</p>
@@ -80,7 +86,9 @@
       </div>
       <div class="project">
         <div class="img-container">
-          <img class="img-style" src="https://source.unsplash.com/random/450x300/?tech" alt="Image of a project"
+          <!-- <img class="img-style" src="https://source.unsplash.com/random/450x300/?tech" alt="Image of a project"
+            width="530" height="300" /> -->
+          <img class="img-style" src="ressources/img/technical-documentation-page-screen.png" alt="Image of a project"
             width="530" height="300" />
           <div class="overlay">
             <h4>Used Tech</h4>
